--- a/client-side/package.json
+++ b/client-side/package.json
@@ -14,11 +14,13 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.19",
     "antd": "^5.11.5",
-    "axios": "^1.6.2",
+    "axios": "^1.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.20.1",
+    "react-time-picker": "^6.6.0",
+    "react-toastify": "^9.1.3",
     "sass": "^1.69.5"
   },
   "devDependencies": {
