--- a/client-side/package.json
+++ b/client-side/package.json
@@ -15,8 +15,10 @@
     "@mui/material": "^5.14.19",
     "antd": "^5.11.5",
     "axios": "^1.6.5",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-places-autocomplete": "^4.0.1",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.20.1",
     "react-time-picker": "^6.6.0",
