--- a/client-side/package.json
+++ b/client-side/package.json
@@ -19,11 +19,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-places-autocomplete": "^4.0.1",
+    "react-modal": "^3.16.1",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.20.1",
     "react-time-picker": "^6.6.0",
     "react-toastify": "^9.1.3",
-    "sass": "^1.69.5"
+    "sass": "^1.69.5",
+    "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
